--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,9 @@
 <resources>
     <string name="app_name">MercadoBarato</string>
+    <string name="scan_barcode">Scan Product</string>
+    <string name="product_code">Product Code</string>
+    <string name="product_price">Product Price</string>
+    <string name="product_description">Product Description</string>
+    <string name="save_product">Save Product</string>
+    <string name="add_product_cart">Adicionar Produto à Lista de Compras</string>
 </resources>
