--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -6,4 +6,5 @@
     <string name="product_description">Product Description</string>
     <string name="save_product">Save Product</string>
     <string name="add_product_cart">Adicionar Produto à Lista de Compras</string>
+    <string name="title_activity_maps">Check-in</string>
 </resources>
