--- a/app/src/main/res/values-pt/strings.xml
+++ b/app/src/main/res/values-pt/strings.xml
@@ -20,5 +20,6 @@
     <string name="confirm_password">Confirmar Senha</string>
     <string name="register">Cadastrar</string>
     <string name="perfil">Perfil</string>
+    <string name="exit">Exit</string>
 
 </resources>
