--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -36,4 +36,5 @@
     <string name="validateFormLogin">Favor preencher todos os campos.</string>
     <string name="validatePermissions">Para usar esse APP é preciso aceitar as permissões.</string>
     <string name="validateLoginSenha">Login ou senha incorretos.</string>
+    <string name="username">Username</string>
 </resources>
