--- a/app/src/main/res/values-pt-rBR/strings.xml
+++ b/app/src/main/res/values-pt-rBR/strings.xml
@@ -3,4 +3,6 @@
     <string name="exit">Exit</string>
     <string name="validateFormLogin">Favor preencher todos os campos.</string>
     <string name="validatePermissions">Para usar esse APP é preciso aceitar as permissões.</string>
+    <string name="email">Email</string>
+    <string name="validatePasswordEquals">Senhas diferentes</string>
 </resources>
