--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -37,4 +37,5 @@
     <string name="validatePermissions">Para usar esse APP é preciso aceitar as permissões.</string>
     <string name="validateLoginSenha">Login ou senha incorretos.</string>
     <string name="username">Username</string>
+    <string name="email">Email</string>
 </resources>
