- Ajeitando range bar.

--- a/app/src/main/res/values-pt/strings.xml
+++ b/app/src/main/res/values-pt/strings.xml
@@ -45,4 +45,5 @@
     <string name="compareProductsPrice">Comparar preços</string>
     <string name="title_activity_compare_prices_form">ComparePricesForm</string>
     <string name="title_activity_compare_price_form_fragment">Compare Price Form</string>
+    <string name="max_distance_to_supermarkets">Distância máxima dos supermercados</string>
 </resources>
