--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -16,6 +16,12 @@
     <string name="listMenu">Grocery Lists</string>
     <string name="productPrice">Products Prices</string>
     <string name="profile">Profile</string>
+    <string name="connect_with_facebook">Log in with Facebook</string>
+    <string name="welcome">Welcome</string>
+    <string name="cancel_login">Login cancelled</string>
+    <string name="error_login">Login failed</string>
+    <string name="logout">Logout</string>
+    <string name="firebase_error_login">Firebase Authentication Failed</string>
 
     <string name="loading">Loading...</string>
     <string name="waiting">Please Wait</string>
