--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -55,4 +55,6 @@
     <string name="title_activity_compare_prices_form">ComparePricesForm</string>
     <string name="title_activity_compare_price_form_fragment">Compare Price Form</string>
     <string name="max_distance_to_supermarkets">Max distance to supermarkets</string>
+    <string name="product_not_found">Product not found</string>
+    <string name="product_was_added">Product was added to shopping list</string>
 </resources>
